--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sweetalert2": "^11.7.20",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
